updating content theme

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
   <div class="container">
     <div class="header">
   <h1 class="site-title"><a href="https://www.hanifsgy.com">HS.is</a></h1>
-  <p class="site-tagline"></p>
+  <p class="site-tagline">Weekly Note Taking iOS Swift</p>
   <div class="nav">
     <a class="nav-btn" href="#">
       <span class="ci ci-burger"></span>
@@ -38,7 +38,9 @@
       <li><a href="/about/">About me / contact</a></li>
        
 	  <li class="spacer">&ac;</li>
-  
+
+      <li><a href="https://github.com/hanifsgy">Github</a></li> 
+      <li><a href="https://twitter.com/hanif_sgy">Twitter</a></li> 
     </ul>
   </div>
 </div>
