--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
     </div>
     <div class="footer">
   
-  
+  <p>Powered by <a href="https://gohugo.io">Hugo</a>. This theme—Slim—is open sourced on <a href="https://github.com/zhe/hugo-theme-slim">Github</a>.</p>
   
 </div>
 
