--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@
 
       gtag("config", "UA-202741078-1");
     </script>
+    {{ template "_internal/google_analytics.html" . }}
   </head>
 
   <body>
